# ASTRO

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
.github/workflows/: deploy.yml
.zed/: bashrc  settings.json
alembic/: env.py
alembic/versions/: 0001_profiles.py  0002_profile_name_normalized.py
astrology_mcp/: __init__.py  config.py  logging.py  main.py  mcp_server.py
astrology_mcp/domain/: __init__.py  enums.py  errors.py  models.py
astrology_mcp/services/: astrology_engine.py  geocoding_service.py  profile_service.py  progression_service.py  synastry_service.py  telegram_notifier.py  timezone_service.py  transit_service.py
astrology_mcp/storage/: database.py  models.py  repositories.py
astrology_mcp/tools/: __init__.py  health_tools.py  metadata.py  natal_chart_tools.py  profile_tools.py  progression_tools.py  synastry_tools.py  telegram_tools.py  transit_tools.py
docs/: architecture.md  compatibility_scoring.md  conda_environment.md  configuration.md  forecasts.md  linux_server_setup.md  mcp_tools.md  natal_chart.md  profiles.md  progressions_directions.md  sqlite.md  synastry.md  systemd.md  transits.md
tests/unit/: test_auth.py  test_conda_environment.py  test_config.py  test_health_tools.py  test_mcp_metadata.py  test_natal_chart.py  test_profiles.py  test_progressions.py  test_synastry.py  test_telegram_notifier.py  test_transits.py
